Fix header rendering on mobile

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -595,13 +595,13 @@ pre tt:before,
 pre tt:after {
   content: "";
 }
-@media only screen and (max-width: 480px) {
-  html {
-    font-size: 100%;
+
+@media (max-width: 600px) {
+  .headerFlexContainer {
+    flex-direction: column;
+    align-items: flex-start;
   }
-}
-@media screen and (max-width:920px) {
   .headerlogo {
-    display: none;
+    margin-top: 20px;
   }
 }
